# agropulse

./: README.md  plan.md
infra/: .terraform.lock.hcl  availability-domains.tf  iam.tf  main.tf  network.tf  outputl.tf  storage.tf  variables.tf
ingestion/: .gitignore  pyproject.toml
